facenettrial/communication/server/hivenet.log
 * Serving Flask app "server" (lazy loading)
 * Environment: production
   WARNING: Do not use the development server in a production environment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 216-269-062
127.0.0.1 - - [27/Feb/2019 18:32:50] "[37mPOST /training-data HTTP/1.1[0m" 200 -
127.0.0.1 - - [27/Feb/2019 18:36:03] "[37mPOST /training-data HTTP/1.1[0m" 200 -
127.0.0.1 - - [27/Feb/2019 18:38:49] "[37mPOST /training-data HTTP/1.1[0m" 200 -
127.0.0.1 - - [27/Feb/2019 18:40:24] "[37mPOST /training-data HTTP/1.1[0m" 200 -
 * Serving Flask app "server" (lazy loading)
 * Environment: production
   WARNING: Do not use the development server in a production environment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 216-269-062
127.0.0.1 - - [27/Feb/2019 19:38:52] "[37mPOST /training-data HTTP/1.1[0m" 200 -
127.0.0.1 - - [27/Feb/2019 19:38:52] "[37mPOST /classifier HTTP/1.1[0m" 200 -
 * Detected change in '/home/william/Documents/school/18/snrProj/HIVENet2/facenettrial/communication/server/server.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 216-269-062
 * Detected change in '/home/william/Documents/school/18/snrProj/HIVENet2/facenettrial/communication/server/server.py', reloading
 * Restarting with stat
  File "server.py", line 41
    def run():
      ^
IndentationError: expected an indented block
  File "server.py", line 38
    def run():
      ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "server.py", line 48, in <module>
    @app.route('/sync-all', method=['POST'])
  File "/home/william/.local/lib/python2.7/site-packages/flask/app.py", line 1250, in decorator
    self.add_url_rule(rule, endpoint, f, **options)
  File "/home/william/.local/lib/python2.7/site-packages/flask/app.py", line 66, in wrapper_func
    return f(self, *args, **kwargs)
  File "/home/william/.local/lib/python2.7/site-packages/flask/app.py", line 1213, in add_url_rule
    rule = self.url_rule_class(rule, methods=methods, **options)
TypeError: __init__() got an unexpected keyword argument 'method'
